--- a/Noamooz.Web/Views/_ViewImports.cshtml
+++ b/Noamooz.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Noamooz.Web
 @using Noamooz.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Noamooz.Web.Infrastructure.*, Noamooz.Web
