--- a/Noamooz.Web/Views/Shared/_Layout.cshtml
+++ b/Noamooz.Web/Views/Shared/_Layout.cshtml
@@ -92,43 +92,10 @@
                                     <div class="mb-3">
                                         <h4>دسته بندی</h4>
                                         <ul class="list-unstyled fruite-categorie" style="text-align: right;">
-                                            <li>
-                                                <div class="d-flex justify-content-between fruite-name">
-                                                    <a href="#"><i class="fas fa-shopping-bag me-2"></i>&nbsp; دسته بندی شماره 1</a>
-                                                    <span>(3)</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="d-flex justify-content-between fruite-name">
-                                                    <a href="#"><i class="fas fa-shopping-bag me-2"></i>&nbsp; دسته بندی شماره 2</a>
-                                                    <span>(3)</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="d-flex justify-content-between fruite-name">
-                                                    <a href="#"><i class="fas fa-shopping-bag me-2"></i>&nbsp; دسته بندی شماره 3</a>
-                                                    <span>(3)</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="d-flex justify-content-between fruite-name">
-                                                    <a href="#"><i class="fas fa-shopping-bag me-2"></i>&nbsp; دسته بندی شماره 4</a>
-                                                    <span>(3)</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="d-flex justify-content-between fruite-name">
-                                                    <a href="#"><i class="fas fa-shopping-bag me-2"></i>&nbsp; دسته بندی شماره 5</a>
-                                                    <span>(3)</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="d-flex justify-content-between fruite-name">
-                                                    <a href="#"><i class="fas fa-shopping-bag me-2"></i>&nbsp; دسته بندی شماره 6</a>
-                                                    <span>(3)</span>
-                                                </div>
-                                            </li>
+                                         
 
+                                            @await Component.InvokeAsync("CategoryMenu")
+                                            
 
                                         </ul>
                                     </div>
