--- a/Noamooz.Web/Views/Shared/_ItemProduct.cshtml
+++ b/Noamooz.Web/Views/Shared/_ItemProduct.cshtml
@@ -12,7 +12,7 @@
             <p>@Model.Description</p>
             <div class="d-flex justify-content-between flex-lg-wrap">
                 <p class="text-dark fs-5 fw-bold mb-0">@Model.Price.ToString("c", new System.Globalization.CultureInfo("fa-IR"))</p>
-                <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> افزودن به سبد خرید</a>
+                <a asp-action="AddToBasket" asp-controller="Basket" asp-route-productId="@Model.ProductId" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> افزودن به سبد خرید</a>
             </div>
         </div>
     </div>
