--- a/Noamooz.Web/Views/Shared/_Layout.cshtml
+++ b/Noamooz.Web/Views/Shared/_Layout.cshtml
@@ -46,11 +46,8 @@
 
                     </div>
                     <div class="d-flex m-3 me-0">
-
-                        <a href="#" class="position-relative me-4 my-auto">
-                            <i class="fa fa-shopping-bag fa-2x"></i>
-                            <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-                        </a>&nbsp
+                        @await Component.InvokeAsync("BasketStatus")
+                        &nbsp
                         <a href="#" class="my-auto">
                             <i class="fas fa-user fa-2x"></i>
                         </a>
@@ -92,10 +89,10 @@
                                     <div class="mb-3">
                                         <h4>دسته بندی</h4>
                                         <ul class="list-unstyled fruite-categorie" style="text-align: right;">
-                                         
+
 
                                             @await Component.InvokeAsync("CategoryMenu")
-                                            
+
 
                                         </ul>
                                     </div>
